tests/baselines/reference/assigningFunctionToTupleIssuesError.errors.txt
assigningFunctionToTupleIssuesError.ts(2,5): error TS2322: Type '() => void' is not assignable to type '[string]'.


==== assigningFunctionToTupleIssuesError.ts (1 errors) ====
    declare let a: () => void;
    let b: [string] = a;
        ~
!!! error TS2322: Type '() => void' is not assignable to type '[string]'.